rewrote rightpoint copy, fixed spacing issues caused by the longer text

--- a/src/components/Rightpoint/index.scss
+++ b/src/components/Rightpoint/index.scss
@@ -22,10 +22,10 @@
     display: none;
   }
   @media only screen and (min-width: $mobileBreakpoint) {
-    height: 100vh;
+    min-height: 100vh;
 
     &_TextBlock {
-      margin: 0 0 0 50px;
+      margin: 20px 0 20px 50px;
       padding: 25px 30px;
     }
     &_Summary {
